# shopify_scraper

./: .env  app_page_dump.html  index.html  page_dump.html  pyproject.toml  requirements.txt  structure.txt  test_scraper.py
alembic/: env.py
alembic/versions/: 12a0d1394e80_add_rating_distributions_table.py  8be1c6a04efb_create_app_listings_table.py
app/api/: main.py
app/core/: config.py  database.py
app/models/: app_listing.py  rating_distribution.py
app/schemas/: app_listing.py  rating_distribution.py
app/scraper/: crawler.py  parser.py  pipeline.py
