[project]
name = "shopify-scraper"
version = "0.1.0"
description = "Scraper for Shopify App Store - Upsell category"
authors = [
    {name = "Abhishek"}
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}

httpx = "^0.27.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.2.0"

sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
alembic = "^1.13.0"

pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
python-dotenv = "^1.0.0"
shell = "^1.0.1"
playwright = "^1.58.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.masonry.api"